<resources>
    <string name="app_name">RecipeApp</string>
    <string name="toolbar_text">Yemek Tarifleri</string>
    <string name="search">Tarif ara...</string>
    <string name="title">Tatlı</string>
    <string name="food_name">Adana Kebap</string>
    <string name="username">Yusuf Mendeş</string>
    <string name="favorite">Favorilerim</string>
    <string name="add_recipe">Tarif Ekle</string>
    <string name="profile">Profilim</string>
    <string name="main">Ana Sayfa</string>
    <string name="recipe_title">Tarif ismi</string>
    <string name="recipe_description">Tarif detayı</string>
    <string name="get_username">Yusuf Mendeş</string>
    <string name="get_email">yusufmendes123@gmail.com</string>
    <string name="change_password">Şifremi Değiştir</string>
    <string name="share">Paylaş</string>
    <string name="share_recipe">Paylaştığım Tarifler</string>
    <string name="old_password">Eski şifre</string>
    <string name="new_password">Yeni şifre</string>
    <string name="name_surname">Ad-Soyad gir</string>
    <string name="email">Email gir</string>
    <string name="password">Şifre gir</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="update_password">Şifremi Yenile</string>
</resources>