<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".presentation.view.changepassword.ChangePasswordFragment">

    <include
        android:id="@+id/changePasswordTl"
        layout="@layout/password_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/changePasswordOldTv"
        style="@style/edit_text"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordTl" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/changePasswordNewTv"
        style="@style/edit_text"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordOldTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordButton"
        style="@style/toolbar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/button_background"
        android:text="@string/change_password"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordNewTv" />

</androidx.constraintlayout.widget.ConstraintLayout>