<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".presentation.view.addrecipe.AddRecipeFragment">

    <include
        android:id="@+id/addRecipeTl"
        layout="@layout/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addRecipeIv"
        android:layout_width="@dimen/width_150dp"
        android:layout_height="@dimen/height_150dp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeTl"
        app:srcCompat="@drawable/baseline_fastfood_24" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/addRecipeTitleEt"
        style="@style/edit_text"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/recipe_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addRecipeIv" />

    <Spinner
        android:id="@+id/addRecipeTypeSpinner"
        style="@style/edit_text"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_48dp"
        android:layout_margin="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeTitleEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/addRecipeDescriptionEt"
        style="@style/edit_text"
        android:layout_width="@dimen/width_0dp"
        android:layout_height="@dimen/height_0dp"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/edit_text_background"
        android:gravity="start"
        android:hint="@string/recipe_description"
        app:layout_constraintBottom_toTopOf="@+id/addRecipeShareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addRecipeTypeSpinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addRecipeShareButton"
        style="@style/toolbar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/button_background"
        android:text="@string/share"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>